added initial styles: background colors for containers, background image, font, font-weights

--- a/todo.txt
+++ b/todo.txt
@@ -2,3 +2,6 @@
 displayed in current train schedule table 
 2. Thinking will need to use moment.js to update next arrival and minutes away 
 3. dynamically generate new table items on submit click 
+
+Styling 
+
